:bug: Fix presets menu alignment

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/measures.scss
@@ -12,21 +12,22 @@
   margin-bottom: var(--sp-s);
   // NOTE: this does not follow the 8-column grid and the size is not normalized,
   // so we need to hardcode this width :(
-  --input-width: calc(var(--sp-xxxl) * 3.5);
+  --input-width: calc(var(--sp-xxxl) * 3.5 - 2 * var(--sp-xs));
   grid-template-columns: var(--input-width) var(--input-width) var(--sp-xxxl);
   column-gap: var(--sp-xs);
 }
 
 .presets {
   display: grid;
-  grid-template-columns: 1fr auto 38px;
-  align-items: flex-start;
+  grid-column: 1 / -1;
+  grid-template-columns: repeat(8, var(--sp-xxxl));
   gap: $s-4;
 }
 
 .presets-wrapper {
   @extend .asset-element;
   position: relative;
+  grid-column: span 4;
   display: flex;
   height: $s-32;
   padding: $s-8;
@@ -47,6 +48,10 @@
       stroke: var(--input-foreground-color-active);
     }
   }
+}
+
+.radio-buttons {
+  grid-column: span 2;
 }
 
 .select-name {
